<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightpink"
    tools:context=".LoginMainActivity">

    <LinearLayout
        android:paddingTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="208dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_image"
                android:layout_width="196dp"
                android:layout_height="238dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/togther" />

            <ImageView
                android:id="@+id/btn_image2"
                android:layout_width="258dp"
                android:layout_height="196dp"
                android:src="@drawable/phar" />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_welcome"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="189dp"
            android:layout_height="49dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:shadowColor="#8C7F7F"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcome"
            android:textColor="#2222B5"
            android:textSize="34sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/txt_email"
            android:layout_width="108dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"

            android:ems="10"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textPersonName"
            android:textColor="#373434"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="144dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:text="@string/password"
            android:textColor="#302D2D"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"


            android:ems="10"
            android:hint="@string/enter_your_password"

            android:inputType="textPassword"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/remeber_me"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_marginStart="135dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/title"
                android:backgroundTintMode="src_atop"
                android:text="@string/login"
                android:textColorHighlight="#553F3F"
                android:textColorLink="#510808"
                android:textStyle="bold"
                app:rippleColor="#A55353" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/new_user"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:backgroundTint="@color/title"
                android:backgroundTintMode="add"
                android:padding="1dp"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#E4D9D9"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>