<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe6f9"
    android:orientation="vertical"
    tools:context=".signupMainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:orientation="vertical">


        <TextView
            android:id="@+id/tv1_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/full_name"
            android:textColor="#322F2F"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:textColorHint="#607D8B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/Address"
            android:textColor="#322F2F"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_address"
            android:inputType="textPersonName"
            android:textColorHint="#607D8B"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:scrollbarSize="18sp"
                android:text="@string/city"
                android:textColor="#322F2F"
                android:textColorHint="#2E2626"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerr"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:entries="@array/country"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:scrollbarSize="18dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="49dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_male"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/male"
                android:textColor="#2A42C6"
                android:textColorHighlight="#2240EA"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbtn_female"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/female"
                android:textColor="#2A42C6"
                android:textColorHighlight="#2240EA"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_mail"
            android:layout_width="114dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="0dp"
            android:text="@string/Email"
            android:textColor="#322F2F"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Enter_your_Email"
            android:inputType="textPersonName"
            android:textColorHint="#607D8B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/password"
            android:textColor="#322F2F"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints=""

            android:ems="10"
            android:hint="@string/Enter_password"
            android:inputType="textPassword"
            android:textColorHint="#607D8B"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm password"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your password again"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginBottom="5dp"
            android:background="#FF3700B3"
            android:gravity="center"
            android:text="@string/signup" />


    </LinearLayout>
</ScrollView>